--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
 
     <groupId>io.lippia.report</groupId>
     <artifactId>ltm-cucumber7-adapter</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.2-SNAPSHOT</version>
 
-    <url>http://lippia.io</url>
+    <url>https://lippia.io</url>
 
     <name>ltm-cucumber7-adapter</name>
     <description>Cucumber-JVM 7 adapter for Lippia Test Manager</description>
